0.9-4
- oce.plot.ts(): alter time auto-ranging method
- oceBisect(): increase generality of function whose root is sought
- plotTS(): clean axes after isopycnals drawn
- teos10: update test values (with help from PB)
- read.adp.nortek(): handle missing 'to' argument as documented
- beamUnattenuateAdp() renamed beamUnspreadAdp()
- plotTS() and plotProfile(): permit type='n'
- plotProfile(ytype='z'): fix bug in y label
- improve error message if TEOS-10 is missing

0.9-3
- example(riley): remove error in R-devel
- plot.ctd(..., which=7) improvement
- swSCTp(): accept conductivity in mS/cm and S/m
- as.ctd(): accept TEOS-10 values SA and CT
- make TEOS routines more resistant to unphysical values

0.9-2
- remove unwanted files during build process

0.9-1
- pwelch(): fix bug in frequency
- tidem(): add argument 'regress'
- rename oce.plot.sticks() as plotSticks(); delete stickplot()
- use S4 style for all plot() methods
- data(giss) added
- data(topo2) added
- plotPolar() added
- oceMagic() new name for magic()
- errorBars() added
- numberAsPOSIXct() add a leap second for July 2012

0.8-10
- plot.topo(): automatic cut-point shift
- add support for Nortek aquadopp-profiler instruments
- oceContour() added
- lisst class added
- plotTaylor() added
- oce.as.raw() added
- binmap() added

0.8-9
- make the newly-added TEOS-10 functions compile on Windows

0.8-8
- data(cm) added
- plot.coastline(): improve argument 'geographical'
- add prettyPosition()
- add grad()
- add (preliminary) support for the TEOS-10 library, which must be installed separately
- add integrateTrapezoid()
- plotTS(): add argument teos
- add teos() as an interface to the TEOS-10 library
- add moonAngle() plus several other astronomy-related functions, e.g. julianDay()

0.8-7
- plotInset(): remove 'bg' and 'fg' arguments
- plotTS(): add 'bg' argument
- rename 'dt' object and functions to 'tdr'
- plotTS(): add argument 'inset'
- read.adp.rdi(): fix a bug in bottom-tracking; add soundSpeed vector