@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.9-4
-Date: 2012-10-23
+Date: 2012-10-24
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
