@@ -370,8 +370,8 @@ imagep <- function(x, y, z,
                       xlim=xlim, ylim=ylim, zlim=zlim, ...)
             }
         }
-        box()
         if (axes) {
+            box()
             oce.axis.POSIXct(side=1, x=x, #cex=cex, cex.axis=cex, cex.lab=cex,
                              drawTimeRange=drawTimeRange,
                              mar=mar, mgp=mgp, debug=debug-1)
@@ -390,8 +390,8 @@ imagep <- function(x, y, z,
             image(x=x, y=y, z=z, axes=FALSE, xlab=xlab, ylab=ylab, breaks=breaks, col=col,
                   xlim=xlim, ylim=ylim, ...)
         }
-        box()
         if (axes) {
+            box()
             axis(1)#, cex.axis=cex, cex.lab=cex)
             axis(2)#, cex.axis=cex, cex.lab=cex)
         }
@@ -399,7 +399,8 @@ imagep <- function(x, y, z,
     if (!is.null(missingColor)) {
         ## FIXME: the negation on is.na is confusing, but it comes from col and breaks together
         image(x, y, !is.na(z), col=c(missingColor, "transparent"), breaks=c(0,1/2,1), add=TRUE)
-        box()
+        if (axes)
+            box()
     }
     if (!(is.character(main) && main == ""))
         mtext(main, at=mean(range(x), na.rm=TRUE), side=3, line=1/8, cex=par("cex"))
